savvy-macro/tests/cases/simple_cases.stderr
error: function must have return type
 --> tests/cases/simple_cases.rs:3:1
  |
3 | #[savvy]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `savvy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the return type must be either syn::Result<Sexp> or syn::Result<()>
 --> tests/cases/simple_cases.rs:7:34
  |
7 | fn foo_wrong_return_type(x: i32) -> i32 {}
  |                                  ^^^^^^

error: For safety, a function that takes `self` and returns `Self` is not allowed
  --> tests/cases/simple_cases.rs:13:5
   |
13 |     fn foo_self(&self) -> Self {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
